zip and better docs